--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,6 @@ yarn-error.log
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
-
 **/fastlane/report.xml
 **/fastlane/Preview.html
 **/fastlane/screenshots
@@ -72,3 +71,20 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# React Native specific files
+#
+# Prevent the local packager cache from being stored in git
+.react-native/
+
+# React Native build files
+/build/
+
+# Exclude assets and compiled files
+android/app/build/
+ios/Pods/
+
+# Exclude Metro, Flow, and Jest specific files
+.flowconfig
+.flow/
+.jest/
